--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [
-    "pages/index/index"
+    "pages/home/home",
+    "pages/map/map"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -10,5 +11,16 @@
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json",
-  "style": "v2"
+  "style": "v2",
+  "plugins": {
+    "routePlan": {
+    "version": "1.0.5",
+    "provider": "wx50b5593e81dd937a"
+    }
+  },
+  "permission": {
+    "scope.userLocation": {
+    "desc": "放心，雷雷雷是不会告诉别人的。"
+    }
+  }
 }
