--- a/miniprogram/package.json
+++ b/miniprogram/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "blueimp-md5": "^2.12.0",
     "miniprogram-computed": "^2.1.1",
     "prismjs": "^1.19.0"
   }
