--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,7 +1,8 @@
 {
   "pages": [
     "pages/home/home",
-    "pages/map/map"
+    "pages/map/map",
+    "pages/barrage/barrage"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -14,13 +15,13 @@
   "style": "v2",
   "plugins": {
     "routePlan": {
-    "version": "1.0.5",
-    "provider": "wx50b5593e81dd937a"
+      "version": "1.0.5",
+      "provider": "wx50b5593e81dd937a"
     }
   },
   "permission": {
     "scope.userLocation": {
-    "desc": "放心，雷雷雷是不会告诉别人的。"
+      "desc": "放心，雷雷雷是不会告诉别人的。"
     }
   }
 }
