--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,8 +1,8 @@
 {
   "pages": [
+    "pages/barrage/barrage",
     "pages/home/home",
-    "pages/map/map",
-    "pages/barrage/barrage"
+    "pages/map/map"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
