refactor: 优化弹幕发送交互

--- a/project.config.json
+++ b/project.config.json
@@ -6,6 +6,7 @@
 		"es6": true,
 		"enhance": true,
 		"postcss": true,
+		"preloadBackgroundData": false,
 		"minified": true,
 		"newFeature": true,
 		"coverView": true,
@@ -24,7 +25,7 @@
 	},
 	"appid": "wx853c94bc9f6a6d7c",
 	"projectname": "wedding",
-	"libVersion": "2.10.3",
+	"libVersion": "2.10.4",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
 	"cloudfunctionTemplateRoot": "cloudfunctionTemplate",
