--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -12,7 +12,7 @@
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "Fanerver_Ray",
+    "navigationBarTitleText": "Fanever_Ray",
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json",
